WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76710
Typo in exception messages
https://bugs.webkit.org/show_bug.cgi?id=76710
Summary
Typo in exception messages
Thiago Marcos P. Santos
Reported
2012-01-20 09:23:15 PST
s/occured/occurred
http://en.wiktionary.org/wiki/occured
Attachments
Fixes typo in some exceptions messages
(4.84 KB, patch)
2012-01-20 09:29 PST
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-01-20 09:29:24 PST
Created
attachment 123338
[details]
Fixes typo in some exceptions messages
WebKit Review Bot
Comment 2
2012-01-23 16:40:27 PST
Comment on
attachment 123338
[details]
Fixes typo in some exceptions messages Clearing flags on attachment: 123338 Committed
r105657
: <
http://trac.webkit.org/changeset/105657
>
WebKit Review Bot
Comment 3
2012-01-23 16:40:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug