Fixed typo in exception messages https://bugs.webkit.org/show_bug.cgi?id=76710

Patch by Thiago Marcos P. Santos <tmpsantos@gmail.com> on 2012-01-23
Reviewed by Alexey Proskuryakov.

* dom/DOMCoreException.cpp:
* fileapi/FileException.cpp:
* storage/SQLTransaction.cpp:
(WebCore::SQLTransaction::openTransactionAndPreflight):
(WebCore::SQLTransaction::postflightAndCommit):
* xml/XMLHttpRequestException.cpp:

Canonical link: https://commits.webkit.org/93691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105657 268f45cc-cd09-0410-ab3c-d52691b4dbfc